--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,3 @@
 <h1>{{title}}</h1>
-<canvas id="canvas"></canvas>
+<canvas id="canvas" width='1280' height='768'></canvas>
 <script src="/javascripts/game.js"></script>
